<resources>
    <string name="app_name">TFG2</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="o">o</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="imagenprincipal">ImagenPrincipal</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="registro">Registro</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_tabla">Nombre tabla</string>
    <string name="anadir">+</string>
    <string name="ejercicio">TODO</string>
    <string name="nombre_ejercicio">nombre ejercicio</string>
    <string name="nombre_musculo">nombre musculo</string>
    <string name="imagen_ejercicio">Imagen Ejercicio</string>
    <string name="descripcion_ejercico">descripcion ejercico</string>
    <string name="a_adir">Añadir</string>
    <string name="rep">Rep</string>
    <string name="series">Series</string>
    <string name="_00">00</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="anadir_ejercicio">Añadir ejercicio</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="parte_del_cuerpo">Parte del cuerpo</string>
    <string name="musculo">Musculo</string>
    <string name="mis_ejercicios">Mis Ejercicios</string>
    <string name="ejercicios_descargados">Ejercicios descargados</string>
    <string name="ejercicios_subidos">Ejercicios subidos</string>
    <string name="nombre_de_la_tabla">Nombre de la tabla</string>
    <string name="mi_tabla">Mi tabla</string>
    <string name="button">Button</string>
    <string name="editar">Editar</string>
    <string name="atr_s">Atrás</string>
    <string name="en_cu_tos_dias_se_dividir_tu_entreno">¿En cuátos dias se dividirá tu entreno?</string>
    <string name="crear_tabla">Crear Tabla</string>
    <string name="elige_la_tabla_del_entrenamiento">Elige la tabla del entrenamiento</string>
    <string name="peso_maximo">Peso maximo</string>
    <string name="fotoejercicio">fotoEjercicio</string>
    <string name="baraa">/</string>
    <string name="_12">12</string>
    <string name="subir_ejercicio">subir ejercicio</string>
    <string name="subiendo_imagen_puede_tardar_unos_segundos">Subiendo imagen, puede tardar unos segundos</string>


    <string-array name="diasGimnasio">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="partesCuerpoOffline">
        <item>Seleccione..</item>
        <item>Brazos</item>
        <item>Piernas</item>
        <item>Tronco</item>
        <item>Cardio</item>
    </string-array>

    <string-array name="musculosOffline">
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Antebrazo</item>
        <item>Deltoides</item>
        <item>Cuadriceps</item>
        <item>Gluteos</item>
        <item>Gemelos</item>
        <item>Isquiotibiales</item>
        <item>Abdomen</item>
        <item>Pectoral</item>
        <item>Trapecio</item>
        <item>Dorsal</item>
        <item>Lumbar</item>
        <item>Espalda</item>
    </string-array>

    <string-array name="brazosOffline">
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Antebrazo</item>
        <item>Deltoides</item>
    </string-array>

    <string-array name="piernasOffline">
        <item>Cuadriceps</item>
        <item>Gluteos</item>
        <item>Gemelos</item>
        <item>Isquiotibiales</item>
    </string-array>

    <string-array name="cuerpoOffline">
        <item>Abdomen</item>
        <item>Pectoral</item>
        <item>Trapecio</item>
        <item>Dorsal</item>
        <item>Lumbar</item>
        <item>Espalda</item>
    </string-array>

    <string-array name="cardioOffline">
        <item>Cardio</item>
    </string-array>

</resources>