<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopUpAnadirTabla">

    <EditText
        android:id="@+id/txt_nombreEjercicio_popUpAnadirTabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nombre_tabla"
        android:inputType="textPersonName"
        android:text="@string/mi_tabla"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_tabla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <Button
        android:id="@+id/btn_ponerNombre_popUpAnadirTabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir"
        android:onClick="guardarNombreTabla"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombreEjercicio_popUpAnadirTabla"
        app:layout_constraintStart_toStartOf="@+id/txt_nombreEjercicio_popUpAnadirTabla"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombreEjercicio_popUpAnadirTabla" />
</androidx.constraintlayout.widget.ConstraintLayout>