<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="314dp"
        android:layout_height="231dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/imagenprincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edt_username_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="8sp"
        />

    <EditText
        android:id="@+id/edt_pass_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edt_username_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_username_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_username_login"
        android:autofillHints=""
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8sp"
        />

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/iniciar_sesion"
        android:onClick="iniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass_login" />

    <TextView
        android:id="@+id/txt_crearCuenta_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goRegisterActivity"
        android:text="@string/crear_cuenta"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/bt_login_login"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/bt_login_login"
        app:layout_constraintTop_toBottomOf="@+id/bt_login_login" />

    <TextView
        android:id="@+id/txt_contraseñaolvidada_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="irContrasenaOlvidada"
        android:text="@string/has_olvidado_la_contrase_a"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/edt_pass_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass_login" />

</androidx.constraintlayout.widget.ConstraintLayout>