<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#590C0C"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_ejercicio_rv_EjercicioLocal"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp" />
        <!--android:src="@tools:sample/avatars"-->


        <LinearLayout
            android:layout_width="246dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nombre_itemEjercicioLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/nombre_ejercicio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_musculo_itemEjercicioLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/nombre_musculo" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_margin="4sp">

            <Button
                android:id="@+id/btn_subirArchivos_itmeEjerciciosLocales"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:text="@string/anadir" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>