<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_magenta"
    android:gravity="center"
    android:paddingRight="10dp">

    <EditText
        android:id="@+id/edt_repHecho_itemDatosEjercicio"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:gravity="right"
        android:hint="@string/_00"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/edt_repHechas_itemDatosEjercicio"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:gravity="right"
        android:hint="@string/_00"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/baraa"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_repEjercicio_itemDatosEjercicio"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/_12"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bnt_subirDatos_datosEjercicios"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="subirDatillos"
        android:paddingRight="20dp"
        app:backgroundTint="@color/white"
        app:icon="@android:drawable/arrow_up_float"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:iconTint="@color/dark_magenta" />
</LinearLayout>